French translation updated

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-04  Philippe Batailler <philippe.batailler@free.fr>
+
+	* fr/*: Applied Guillem's work to french.
+	
 2006-02-28  Guillem Jover  <guillem@debian.org>
 
 	* C/dpkg.1 (SEE ALSO): Add dpkg-query(1).
