--- a/man/fr/cleanup-info.8.fr.po
+++ b/man/fr/cleanup-info.8.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-04 10:57+0100\n"
+"PO-Revision-Date: 2006-03-04 11:58+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,13 +17,13 @@ msgstr ""
 #: cleanup-info.8:1
 #, no-wrap
 msgid "cleanup-info"
-msgstr ""
+msgstr "cleanup-info"
 
 # type: TH
 #: cleanup-info.8:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "28-02-2006"
 
 # type: TH
 #: cleanup-info.8:1
@@ -58,13 +58,10 @@ msgstr "SYNOPSIS"
 
 # type: Plain text
 #: cleanup-info.8:9
-#, fuzzy
 msgid ""
 "B<cleanup-info> [B<--help>] [B<--unsafe>] [B<--version>] [B<-->] "
 "[I<E<lt>dirnameE<gt>>]"
-msgstr ""
-"B<cleanup-info> [--help] [--unsafe] [--version] [--] "
-"[I<E<lt>répertoireE<gt>>]"
+msgstr "B<cleanup-info> [B<--help>] [B<--unsafe>] [B<--version>] [B<-->] [I<E<lt>répertoireE<gt>>]"
 
 # type: SH
 #: cleanup-info.8:10
@@ -124,9 +121,9 @@ msgstr "OPTIONS"
 
 # type: TP
 #: cleanup-info.8:28
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--help>"
-msgstr "I<--help>"
+msgstr "B<--help>"
 
 # type: Plain text
 #: cleanup-info.8:31
@@ -135,9 +132,9 @@ msgstr "Affiche un écran d'aide et se termine normalement."
 
 # type: TP
 #: cleanup-info.8:31
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--unsafe>"
-msgstr "I<--unsafe>"
+msgstr "B<--unsafe>"
 
 # type: Plain text
 #: cleanup-info.8:34
@@ -153,9 +150,9 @@ msgstr ""
 
 # type: TP
 #: cleanup-info.8:36
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--version>"
-msgstr "I<--version>"
+msgstr "B<--version>"
 
 # type: Plain text
 #: cleanup-info.8:39
@@ -170,9 +167,9 @@ msgstr "FICHIERS"
 
 # type: TP
 #: cleanup-info.8:41
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "I</usr/info/dir> or I<E<lt>dirnameE<gt>/dir>"
-msgstr "I</usr/info/dir ou E<lt>répertoireE<gt>/dir>"
+msgstr "I</usr/info/dir> ou I<E<lt>répertoireE<gt>/dir>"
 
 # type: Plain text
 #: cleanup-info.8:44
@@ -218,7 +215,6 @@ msgstr "Copyright (C) 1996 Kim-Minh Kaplan."
 
 # type: Plain text
 #: cleanup-info.8:55
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
