--- a/man/fr/deb.5.fr.po
+++ b/man/fr/deb.5.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-05 10:59+0100\n"
+"PO-Revision-Date: 2006-03-04 11:42+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,13 +17,13 @@ msgstr ""
 #: deb.5:1
 #, no-wrap
 msgid "deb"
-msgstr ""
+msgstr "deb"
 
 # type: TH
 #: deb.5:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "28-02-2006"
 
 # type: TH
 #: deb.5:1
@@ -101,7 +101,6 @@ msgstr ""
 
 # type: Plain text
 #: deb.5:31
-#, fuzzy
 msgid ""
 "The first member is named B<debian-binary> and contains a series of lines, "
 "separated by newlines. Currently only one line is present, the format "
@@ -134,7 +133,6 @@ msgstr ""
 
 # type: Plain text
 #: deb.5:46
-#, fuzzy
 msgid ""
 "The second required member is named B<control.tar.gz .> It is a gzipped tar "
 "archive containing the package control information, as a series of plain "
@@ -142,9 +140,9 @@ msgid ""
 "control information. The control tarball may optionally contain an entry for "
 "`B<.>', the current directory."
 msgstr ""
-"Le second membre requis est nommé B<control.tar.gz .> Il s'agit d'une "
-"archive tar compressée grâce à gzip contenant les informations de contrôle "
-"du paquet, sous la forme d'une série de fichiers, parmi lesquels le fichier "
+"Le second membre requis est nommé B<control.tar.gz>. Il s'agit d'une archive "
+"tar compressée grâce à gzip contenant les informations de contrôle du "
+"paquet, sous la forme d'une série de fichiers, parmi lesquels le fichier "
 "B<control> est strictement requis et contient les principales informations "
 "de contrôle. L'archive de contrôle peut éventuellement contenir une entrée "
 "pour «\\ .\\ », le répertoire courant."
@@ -160,7 +158,6 @@ msgstr ""
 
 # type: Plain text
 #: deb.5:61
-#, fuzzy
 msgid ""
 "These members must occur in this exact order. Current implementations should "
 "ignore any additional members after B<data.tar.gz>.  Further members may be "
@@ -171,11 +168,11 @@ msgid ""
 msgstr ""
 "Ces trois membres doivent apparaître dans cet ordre exact. Les "
 "implémentations actuelles devraient ignorer tout membre additionnel suivant "
-"B<data.tar.gz.> D'autres membres seront éventuellement définis dans le "
-"futur, et (si possible)  seront placés après ces trois derniers. Tout autre "
-"membre qui nécessitera d'être inséré avant B<data.tar.gz> et qui pourra être "
-"ignoré sans problème par des programmes plus anciens, auront un nom "
-"commençant par un underscore, «\\ _\\ »."
+"B<data.tar.gz>. D'autres membres seront éventuellement proposés, et (si "
+"possible)  seront placés après ces trois derniers. Tout autre membre qui "
+"nécessitera d'être inséré avant B<data.tar.gz> et qui pourra être ignoré "
+"sans problème par des programmes plus anciens, aura un nom commençant par un "
+"underscore, «\\ _\\ »."
 
 # type: Plain text
 #: deb.5:67
