--- a/man/fr/dpkg-checkbuilddeps.1.fr.po
+++ b/man/fr/dpkg-checkbuilddeps.1.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-04 14:31+0100\n"
+"PO-Revision-Date: 2006-03-04 11:25+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -15,19 +15,19 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-checkbuilddeps"
-msgstr "B<dpkg-checkbuilddeps> -B [I<fichier-control>]"
+msgstr "dpkg-checkbuilddeps"
 
 # type: TH
 #: dpkg-checkbuilddeps.1:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "28-02-2006"
 
 # type: TH
 #: dpkg-checkbuilddeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
 msgstr "Projet debian"
 
@@ -58,9 +58,8 @@ msgstr "SYNOPSIS"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:7
-#, fuzzy
 msgid "B<dpkg-checkbuilddeps> B<-B> [I<control-file>]"
-msgstr "B<dpkg-checkbuilddeps> -B [I<fichier-control>]"
+msgstr "B<dpkg-checkbuilddeps> B<-B> [I<fichier-control>]"
 
 # type: SH
 #: dpkg-checkbuilddeps.1:8
@@ -70,7 +69,6 @@ msgstr "DESCRIPTION"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:12
-#, fuzzy
 msgid ""
 "This program checks the installed packages in the system against the build "
 "dependencies and build conflicts listed in the control file. If any are not "
@@ -83,12 +81,11 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:15
-#, fuzzy
 msgid ""
 "By default, I<debian/control> is read, but an alternate control filename may "
 "be specified on the command line."
 msgstr ""
-"Normalement, le fichier B<debian/control> est lu, mais un autre fichier peut "
+"Normalement, le fichier I<debian/control> est lu, mais un autre fichier peut "
 "être indiqué sur la ligne de commande."
 
 # type: SH
@@ -99,18 +96,17 @@ msgstr "OPTIONS"
 
 # type: TP
 #: dpkg-checkbuilddeps.1:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-B>"
-msgstr "I<-B>"
+msgstr "B<-B>"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:21
-#, fuzzy
 msgid ""
 "Ignore I<Build-Depends-Indep> lines. Use when no arch-indep packages will be "
 "built."
 msgstr ""
-"Ignore les lignes Build-Depends-Indep. À utiliser quand aucun paquet "
+"Ignore les lignes I<Build-Depends-Indep>. À utiliser quand aucun paquet "
 "indépendant d'une architecture ne sera construit."
 
 # type: SH
@@ -132,13 +128,11 @@ msgstr "mailto:joeyh@debian.org"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:26
-#, fuzzy
 msgid "E<lt>joeyh@debian.orgE<gt>."
-msgstr "E<lt>joeyh@debian.orgE<gt>"
+msgstr "E<lt>joeyh@debian.orgE<gt>."
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:29
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
