--- a/man/fr/dpkg-divert.8.fr.po
+++ b/man/fr/dpkg-divert.8.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-04 21:17+0100\n"
+"PO-Revision-Date: 2006-03-04 11:22+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,13 +17,13 @@ msgstr ""
 #: dpkg-divert.8:1
 #, no-wrap
 msgid "dpkg-divert"
-msgstr ""
+msgstr "dpkg-divert"
 
 # type: TH
 #: dpkg-divert.8:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "28-02-2006"
 
 # type: TH
 #: dpkg-divert.8:1
@@ -57,27 +57,23 @@ msgstr "SYNOPSIS"
 
 # type: Plain text
 #: dpkg-divert.8:10
-#, fuzzy
 msgid "B<dpkg-divert> [I<options>] [B<--add>] I<E<lt>fileE<gt>>"
-msgstr "B<dpkg-divert> [options] [--add] I<E<lt>fichierE<gt>>"
+msgstr "B<dpkg-divert> [I<options>] [B<--add>] I<E<lt>fichierE<gt>>"
 
 # type: Plain text
 #: dpkg-divert.8:15
-#, fuzzy
 msgid "B<dpkg-divert> [I<options>] B<--remove> I<E<lt>fileE<gt>>"
-msgstr "B<dpkg-divert> [options] --remove I<E<lt>fichierE<gt>>"
+msgstr "B<dpkg-divert> [I<options>] B<--remove> I<E<lt>fichierE<gt>>"
 
 # type: Plain text
 #: dpkg-divert.8:20
-#, fuzzy
 msgid "B<dpkg-divert> [I<options>] B<--list> I<E<lt>glob-patternE<gt>>"
-msgstr "B<dpkg-divert> [options] --list I<E<lt>motif-de-rechercheE<gt>>"
+msgstr "B<dpkg-divert> [I<options>] B<--list> I<E<lt>motif-de-rechercheE<gt>>"
 
 # type: Plain text
 #: dpkg-divert.8:25
-#, fuzzy
 msgid "B<dpkg-divert> [I<options>] B<--truename> I<E<lt>fileE<gt>>"
-msgstr "B<dpkg-divert> [options] --truename I<E<lt>fichierE<gt>>"
+msgstr "B<dpkg-divert> [I<options>] B<--truename> I<E<lt>fichierE<gt>>"
 
 # type: SH
 #: dpkg-divert.8:26
@@ -107,7 +103,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-divert.8:42
-#, fuzzy
 msgid ""
 "B<dpkg-divert> is the utility used to set up and update the list of "
 "diversions. It functions in three basic modes - adding, removing, and "
@@ -116,10 +111,10 @@ msgid ""
 "file with B<--truename>. Other options (listed below) may also be specified."
 msgstr ""
 "B<dpkg-divert> sert à créer et à mettre à jour la liste des détournements. "
-"Il possède trois modes élémentaires - l'ajout, la suppression et le listage "
-"d'un détournement. Les options sont respectivement --add, --remove, et --"
-"list. De plus, il peut afficher le vrai nom d'un fichier détourné avec --"
-"truename. On peut indiquer d'autres options (voyez la liste ci-dessous)."
+"Il possède trois modes élémentaires, l'ajout, la suppression et le listage "
+"d'un détournement. Les options sont respectivement B<--add>, B<--remove> et "
+"B<--list>. De plus, il peut afficher le vrai nom d'un fichier détourné avec "
+"B<--truename>. On peut indiquer d'autres options (voyez la liste ci-dessous)."
 
 # type: SH
 #: dpkg-divert.8:42
@@ -129,39 +124,37 @@ msgstr "OPTIONS"
 
 # type: TP
 #: dpkg-divert.8:43
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--admindir>I< E<lt>directoryE<gt>>"
-msgstr "I<--admindir E<lt>répertoireE<gt>>"
+msgstr "B<--admindir>I< E<lt>répertoireE<gt>>"
 
 # type: Plain text
 #: dpkg-divert.8:46
-#, fuzzy
 msgid ""
 "Set the dpkg data directory to I<E<lt>directoryE<gt>> (default: I</var/lib/"
 "dpkg>)."
 msgstr ""
-"Définit le répertoire de données de Dpkg comme E<lt>répertoireE<gt> (par "
-"défaut c'est /var/lib/dpkg)."
+"Définit le répertoire de données de Dpkg comme I<E<lt>répertoireE<gt>> (par "
+"défaut c'est I</var/lib/dpkg>)."
 
 # type: TP
 #: dpkg-divert.8:46
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--divert>I< E<lt>divert-toE<gt>>"
-msgstr "I<--divert E<lt>détourner-dansE<gt>>"
+msgstr "B<--divert>I< E<lt>détourner-dansE<gt>>"
 
 # type: Plain text
 #: dpkg-divert.8:49
-#, fuzzy
 msgid "I<E<lt>divert-toE<gt>> is the name used by other packages' versions."
 msgstr ""
-"E<lt>détourner-dansE<gt> est le nom utilisé pour les autres versions des "
+"I<E<lt>détourner-dansE<gt>> est le nom utilisé pour les autres versions des "
 "paquets."
 
 # type: TP
 #: dpkg-divert.8:49
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--help>"
-msgstr "I<--help>"
+msgstr "B<--help>"
 
 # type: Plain text
 #: dpkg-divert.8:52
@@ -172,9 +165,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-divert.8:52
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--local>"
-msgstr "I<--local>"
+msgstr "B<--local>"
 
 # type: Plain text
 #: dpkg-divert.8:55
@@ -183,25 +176,24 @@ msgstr "Indique que toutes les versions des paquets sont détournées."
 
 # type: TP
 #: dpkg-divert.8:55
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--package>I< E<lt>packageE<gt>>"
-msgstr "I<--package E<lt>paquetE<gt>>"
+msgstr "B<--package>I< E<lt>paquetE<gt>>"
 
 # type: Plain text
 #: dpkg-divert.8:59
-#, fuzzy
 msgid ""
 "I<E<lt>packageE<gt>> is the name of a package whose copy of "
 "I<E<lt>fileE<gt>> will not be diverted."
 msgstr ""
-"E<lt>paquetE<gt> est le nom du paquet dont la copie de E<lt>fichierE<gt> ne "
-"sera pas détournée."
+"I<E<lt>paquetE<gt>> est le nom du paquet dont la copie de "
+"I<E<lt>fichierE<gt>> ne sera pas détournée."
 
 # type: TP
 #: dpkg-divert.8:59
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--quiet>"
-msgstr "I<--quiet>"
+msgstr "B<--quiet>"
 
 # type: Plain text
 #: dpkg-divert.8:62
@@ -210,9 +202,9 @@ msgstr "Mode silencieux, pas de bavardage."
 
 # type: TP
 #: dpkg-divert.8:62
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--rename>"
-msgstr "I<--rename>"
+msgstr "B<--rename>"
 
 # type: Plain text
 #: dpkg-divert.8:66
@@ -225,9 +217,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-divert.8:66
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--test>"
-msgstr "I<--test>"
+msgstr "B<--test>"
 
 # type: Plain text
 #: dpkg-divert.8:69
@@ -236,9 +228,9 @@ msgstr "Mode de test, ne rien modifier réellement, seulement montrer."
 
 # type: TP
 #: dpkg-divert.8:69
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--version>"
-msgstr "I<--version>"
+msgstr "B<--version>"
 
 # type: Plain text
 #: dpkg-divert.8:72
@@ -253,25 +245,22 @@ msgstr "NOTES"
 
 # type: Plain text
 #: dpkg-divert.8:77
-#, fuzzy
 msgid ""
 "When adding, default is B<--local> and B<--divert> I<E<lt>originalE<gt>."
 "distrib>. When removing, B<--package> or B<--local> and B<--divert> must "
 "match if specified."
 msgstr ""
-"Pour l'ajout, le défaut est --local et --divert E<lt>originalE<gt>.distrib. "
-"Pour la suppression, --package ou --local et --divert doivent correspondre "
-"quand ils sont précisés."
+"Pour l'ajout, le défaut est B<--local> et B<--divert> I< E<lt>originalE<gt>."
+"distrib>. Pour la suppression, B<--package> ou B<--local> et B<--divert> "
+"doivent correspondre quand ils sont précisés."
 
 # type: Plain text
 #: dpkg-divert.8:79
-#, fuzzy
 msgid "Directories can't be diverted with B<dpkg-divert>."
-msgstr "On ne peut pas détourner des répertoires avec dpkg-divert."
+msgstr "On ne peut pas détourner des répertoires avec B<dpkg-divert>."
 
 # type: Plain text
 #: dpkg-divert.8:85
-#, fuzzy
 msgid ""
 "Care should be taken when diverting shared libraries, B<ldconfig> (8)  "
 "creates a symbolic link based on the DT_SONAME field embedded in the "
@@ -280,7 +269,7 @@ msgid ""
 "end up pointing at the diverted library."
 msgstr ""
 "Il faut faire attention quand une bibliothèque partagée est détournée. "
-"ldconfig(8) crée un lien symbolique à partir du champ DT_SONAME embarqué "
+"B<ldconfig> (8) crée un lien symbolique à partir du champ DT_SONAME embarqué "
 "dans la bibliothèque. ldconfig ne connaît pas les détournements (seul dpkg "
 "le fait), et si une bibliothèque détournée possède le même SONAME que la "
 "bibliothèque non détournée, le lien symbolique peut pointer en fin de compte "
@@ -364,13 +353,12 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-divert.8:115
-#, fuzzy
 msgid ""
 "Note: B<dpkg-divert> preserves the old copy of this file, with extension \"-"
 "old\", before replacing it with the new one."
 msgstr ""
-"Note : dpkg-divert préserve l'ancienne copie de ce fichier, avec l'extension "
-"«\\ -old\\ », avant de la remplacer par la nouvelle."
+"Note : B<dpkg-divert> préserve l'ancienne copie de ce fichier, avec "
+"l'extension «\\ -old\\ », avant de la remplacer par la nouvelle."
 
 # type: SH
 #: dpkg-divert.8:116
@@ -396,7 +384,6 @@ msgstr "Copyright (C) 1995 Ian Jackson."
 
 # type: Plain text
 #: dpkg-divert.8:122
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
