--- a/man/fr/dpkg-name.1.fr.po
+++ b/man/fr/dpkg-name.1.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-18 16:24+0100\n"
+"PO-Revision-Date: 2006-03-04 17:44+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,9 +29,9 @@ msgstr "dpkg-name"
 #.  This is free software; see the GNU General Public Licence version 2
 #.  or later for copying conditions.  There is NO warranty.
 #: dpkg-name.1:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-02-28"
-msgstr "11-02-2006"
+msgstr "28-02-2006"
 
 # type: TH
 #.  This is an -*- nroff -*- source file.
@@ -72,15 +72,14 @@ msgstr "SYNOPSIS"
 
 # type: Plain text
 #: dpkg-name.1:22
-#, fuzzy
 msgid ""
 "B<dpkg-name> [B<-a>|B<--no-architecture>] [B<-o>|B<--overwrite>] [B<-s>|B<--"
 "subdir> [I<dir>]] [B<-c>|B<--create-dir>] [B<-h>|B<--help>] [B<-v>|B<--"
 "version>] [B<-l>|B<--license>] [B<-k>|B<--symlink>] [B<-->] [I<files>]"
 msgstr ""
-"B<dpkg-name> [-a|--no-architecture] [-o|--overwrite] [-s|--subdir [rep]] [-"
-"c|--create-dir] [-h|--help] [-v|--version] [-l|--license] [-k|--symlink] [-"
-"[--] [fichiers]"
+"B<dpkg-name> [B<-a>|B<--no-architecture>] [B<-o>|B<--overwrite>] [B<-s>|B<--"
+"subdir> [I<rep>]] [B<-c>|B<--create-dir>] [B<-h>|B<--help>] [B<-v>|B<--"
+"version> [B<-l>|B<--license>] [B<-k>|B<--symlink>] [B<-->] [I<fichiers>]"
 
 # type: SH
 #: dpkg-name.1:22
@@ -153,9 +152,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-name.1:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-s, --subdir> [I<dir>]"
-msgstr "B<-s, --subdir [rep]>"
+msgstr "B<-s, --subdir> [I<rep>]"
 
 # type: Plain text
 #: dpkg-name.1:56
