--- a/man/fr/dpkg-source.1.fr.po
+++ b/man/fr/dpkg-source.1.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg.1\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-20 21:17+0200\n"
+"PO-Revision-Date: 2006-03-04 17:34+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,14 +18,14 @@ msgstr ""
 #: dpkg-source.1:2
 #, no-wrap
 msgid "dpkg-source"
-msgstr ""
+msgstr "dpkg-source"
 
 # type: TH
 #.  Authors: Ian Jackson
 #: dpkg-source.1:2
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "28-02-2006"
 
 # type: TH
 #.  Authors: Ian Jackson
@@ -133,7 +133,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:68
-#, fuzzy
 msgid ""
 "B<dpkg-shlibdeps> calculates shared library dependencies for executables "
 "named in its arguments. The dependencies are added to the substitution "
@@ -150,16 +149,16 @@ msgstr ""
 "B<dpkg-shlibdeps> calcule, pour les exécutables nommés dans ses arguments, "
 "les dépendances envers les bibliothèques partagées. Ces dépendances sont "
 "ajoutées au fichier B<debian/substvars> sous la forme B<shlibs:"
-">I<dependencyfield> où I<dependencyfield> est le nom du champ «\\ dépendance"
-"\\ ». Toute autre variable après I<shlibs:> est supprimée du fichier. B<dpkg-"
-"shlibdeps> lit les informations concernant les dépendances envers les "
-"bibliothèques partagées dans les fichiers suivants\\ : B<debian/shlibs."
-"local>, B</etc/dpkg/shlibs.override>, le fichier B<shlibs>, (fichier du "
-"paquet contenant un fichier qui, selon B<objdump,> satisfait au système de "
-"dépendance envers les bibliothèques) ou bien B</etc/dpkg/shlibs.default.> Le "
-"premier trouvé est utilisé. Voyez B<dpkg-shlibdeps>(1) pour des précisions "
-"sur le format des fichiers qui traitent des dépendances envers les "
-"bibliothèques partagées."
+">I<dependencyfield> où I<dependencyfield> est le nom du champ de «\\ "
+"dépendance\\ ». Toute autre variable après I<shlibs:> est supprimée du "
+"fichier. B<dpkg-shlibdeps> lit les informations concernant les dépendances "
+"envers les bibliothèques partagées dans les fichiers suivants\\ : B<debian/"
+"shlibs.local>, B</etc/dpkg/shlibs.override>, le fichier B<shlibs>, (fichier "
+"du paquet contenant un fichier qui, selon B<objdump,> satisfait au système "
+"de dépendance envers les bibliothèques) ou bien B</etc/dpkg/shlibs.default>. "
+"Le premier trouvé est utilisé. Voyez B<dpkg-shlibdeps>(1) pour des "
+"précisions sur le format des fichiers qui traitent des dépendances envers "
+"les bibliothèques partagées."
 
 # type: Plain text
 #: dpkg-source.1:74
@@ -233,7 +232,6 @@ msgstr "B<-h>"
 
 # type: Plain text
 #: dpkg-source.1:99
-#, fuzzy
 msgid ""
 "Display the particular program's version and usage message, including a "
 "synopsis of the options it understands. This option is understood by all the "
@@ -278,7 +276,6 @@ msgstr "B<-C>I<description-des-changements>"
 
 # type: Plain text
 #: dpkg-source.1:119
-#, fuzzy
 msgid ""
 "Read the description of the changes from the file I<changesdescription> "
 "rather than using the information from the source tree's changelog file. "
@@ -477,7 +474,6 @@ msgstr "B<-c>I<fichier/control>"
 
 # type: Plain text
 #: dpkg-source.1:217
-#, fuzzy
 msgid ""
 "Specifies the main source control file to read information from. The default "
 "is B<debian/control>.  This option is understood by B<dpkg-source>, B<dpkg-"
@@ -495,14 +491,13 @@ msgstr "B<-l>I<fichier/changelog>"
 
 # type: Plain text
 #: dpkg-source.1:224
-#, fuzzy
 msgid ""
 "Specifies the change log file to read information from. The default is "
 "B<debian/changelog>.  This option is understood by B<dpkg-source>, B<dpkg-"
 "gencontrol> and B<dpkg-genchanges>."
 msgstr ""
 "Indique le fichier d'enregistrement des changements où trouver des "
-"renseignements. Par défaut, c'est le fichier B<debian/changelog.> B<dpkg-"
+"renseignements. Par défaut, c'est le fichier B<debian/changelog>. B<dpkg-"
 "source>, B<dpkg-gencontrol> et B<dpkg-genchanges> acceptent cette option."
 
 # type: TP
@@ -531,7 +526,6 @@ msgstr "B<-F>I<format-du-changelog>"
 
 # type: Plain text
 #: dpkg-source.1:237
-#, fuzzy
 msgid ""
 "Specifies the format of the changelog. By default the format is read from a "
 "special line near the bottom of the changelog or failing that defaults to "
@@ -540,8 +534,8 @@ msgid ""
 msgstr ""
 "Donne le format du fichier changelog. Par défaut, c'est une ligne spéciale, "
 "près de la fin du fichier, qui l'indique\\ ; sinon, on utilise le format "
-"classique B<debian>.  B<dpkg-source\",> dpkg-gencontrol B<et\">dpkg-"
-"genchangesB<acceptent>cetteB<option.>"
+"classique B<debian>. B<dpkg-source>, B<dpkg-gencontrol> et B<dpkg-"
+"genchanges> acceptent cette option."
 
 # type: TP
 #: dpkg-source.1:237
@@ -551,7 +545,6 @@ msgstr "B<-W>"
 
 # type: Plain text
 #: dpkg-source.1:244
-#, fuzzy
 msgid ""
 "This option turns certain errors into warnings. Only dpkg-source uses this, "
 "but B<dpkg-buildpackage> recognizes it, and passes it thru to B<dpkg-source>."
@@ -599,7 +592,6 @@ msgstr "B<-x>"
 
 # type: Plain text
 #: dpkg-source.1:265
-#, fuzzy
 msgid ""
 "Extract a source package. One non-option argument must be supplied, the name "
 "of the Debian source control file (B<.dsc>).  An optional second non-option "
@@ -652,7 +644,6 @@ msgstr "B<-b>"
 
 # type: Plain text
 #: dpkg-source.1:296
-#, fuzzy
 msgid ""
 "Build: pack up a source tree. One or two non-option arguments should be "
 "supplied. The first is taken as the name of the directory containing the "
@@ -700,7 +691,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:316
-#, fuzzy
 msgid ""
 "This is very helpful in cutting out extraneous files that get included in "
 "the .diff.gz, (eg: \"debian/BUGS_TODO/*\" or \"debian/RCS/*,v\"). For "
@@ -767,22 +757,20 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:350
-#, fuzzy
 msgid ""
 "If B<-su> or B<-sr> is specified the original source is expected as a "
 "directory, by default I<package>B<->I<upstream-version>B<.orig> and B<dpkg-"
 "source> will create a new original source archive from it. If B<-sr> is used "
 "B<dpkg-source will remove that directory after it has been used.>"
 msgstr ""
-"Quand on spécifie B<-su> ou B<-sr,> le source originel est attendu comme un "
+"Quand on spécifie B<-su> ou B<-sr>, le source originel est attendu comme un "
 "répertoire\\ ; par défaut, c'est le répertoire I<paquet>B<->I<version-"
 "originelle>B<.orig> et B<dpkg-source> crée une nouvelle archive du source "
-"originel. Quand on utilise B<-sr,> B<dpkg-source> supprime ce répertoire "
+"originel. Quand on utilise B<-sr>, B<dpkg-source> supprime ce répertoire "
 "après usage."
 
 # type: Plain text
 #: dpkg-source.1:361
-#, fuzzy
 msgid ""
 "If B<-ss> is specified B<dpkg-source> will expect that the original source "
 "is available both as a directory and as a tarfile. If will use the directory "
@@ -790,7 +778,7 @@ msgid ""
 "be used with care - if the directory and tarfile do not match a bad source "
 "archive will be generated."
 msgstr ""
-"Quand on utilise B<-ss,> B<dpkg-source> s'attend à ce que le source originel "
+"Quand on utilise B<-ss>, B<dpkg-source> s'attend à ce que le source originel "
 "soit disponible à la fois comme un répertoire et comme un fichier «\\ tar\\ "
 "». Il se sert du répertoire pour créer le «\\ diff\\ », mais se sert du "
 "fichier «\\ tar\\ » pour créer le fichier B<.dsc>. On doit faire attention "
@@ -799,14 +787,13 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:370
-#, fuzzy
 msgid ""
 "If B<-sn> is specified B<dpkg-source> will not look for any original source, "
 "and will not generate a diff.  The second argument, if supplied, must be the "
 "empty string. This is used for Debian-specific packages which do not have a "
 "separate upstream source and therefore have no debianisation diffs."
 msgstr ""
-"Quand on utilise B<-sn,> B<dpkg-source> ne cherche pas de source originel, "
+"Quand on utilise B<-sn>, B<dpkg-source> ne cherche pas de source originel, "
 "et ne crée pas de «\\ diff\\ ». Le second argument, s'il existe, doit être "
 "une chaîne vide. Cela sert pour les paquets Debian pure souche qui n'ont pas "
 "un source originel distinct et donc, pas de fichier «\\ diff\\ » de "
@@ -845,7 +832,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:405
-#, fuzzy
 msgid ""
 "B<-sa>, B<-sp>, B<-sk>, B<-su> and B<-sr> will not overwrite existing "
 "tarfiles or directories. If this is desired then B<-sA>, B<-sP>, B<-sK>, B<-"
@@ -870,7 +856,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:415
-#, fuzzy
 msgid ""
 "If B<-sp> is used when extracting then the original source (if any) will be "
 "left as a tarfile. If it is not already located in the current directory or "
@@ -890,7 +875,6 @@ msgstr "L'option B<-su> dépaquète une arborescence source originelle."
 
 # type: Plain text
 #: dpkg-source.1:423
-#, fuzzy
 msgid ""
 "B<-sn> ensures that the original source is neither copied to the current "
 "directory nor unpacked. Any original source tree that was in the current "
@@ -1383,7 +1367,6 @@ msgstr "LES ARGUMENTS DE DPKG-DISTADDFILE"
 
 # type: Plain text
 #: dpkg-source.1:659
-#, fuzzy
 msgid ""
 "B<dpkg-distaddfile> does not take any non-common options. It takes three non-"
 "option arguments, the filename and the section and priority for the B<."
@@ -1391,7 +1374,7 @@ msgid ""
 msgstr ""
 "B<dpkg-distaddfile> ne prend pas d'option particulière. Il prend trois "
 "arguments sans option, à savoir le nom du fichier, la section et la "
-"priorité, pour le fichier B<.changes.>"
+"priorité, pour le fichier B<.changes>."
 
 # type: Plain text
 #: dpkg-source.1:667
@@ -1441,7 +1424,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:687
-#, fuzzy
 msgid ""
 "A variable substitution has the form B<${>I<variable-name>B<}>.  Variable "
 "names consist of alphanumerics, hyphens and colons and start with an "
@@ -1449,12 +1431,12 @@ msgid ""
 "left; the full text of the field after the substitution is rescanned to look "
 "for more substitutions."
 msgstr ""
-"Une substitution de variable est de la forme : B<${>I<variable-nom>B<}>.B< "
-"Les noms de variable consistent en caractères alphanumériques, traits "
-"d'union et «\\ deux points\\ » ; ils commencent par une lettre ou un "
-"chiffre.  La substitution se fait répétitivement jusqu'à ce qu'il n'en reste "
-"aucune à faire\\ ; le texte entier du champ après la substitution est "
-"réexaminé pour chercher d'autres substitutions.>"
+"Une substitution de variable est de la forme : B<${>I<variable-nom>B<}>. Les "
+"noms de variable consistent en caractères alphanumériques, traits d'union et "
+"«\\ deux points\\ » ; ils commencent par une lettre ou un chiffre. La "
+"substitution se fait répétitivement jusqu'à ce qu'il n'en reste aucune à "
+"faire\\ ; le texte entier du champ après la substitution est réexaminé pour "
+"chercher d'autres substitutions."
 
 # type: Plain text
 #: dpkg-source.1:694
@@ -1462,13 +1444,12 @@ msgid ""
 "After all the substitutions have been done each occurence of the string B<${}"
 "> (which is not a legal substitution) is replaced with a B<$> sign."
 msgstr ""
-"B<Quand toutes les substitutions ont été faites, chaque occurrence de la "
-"chaîne ${}> (laquelle n'est pas une substitution autorisée) est remplacée "
-"par un signe B<$.>"
+"Quand toutes les substitutions ont été faites, chaque occurrence de la "
+"chaîne B<${}> (laquelle n'est pas une substitution autorisée) est remplacée "
+"par un signe B<$>."
 
 # type: Plain text
 #: dpkg-source.1:707
-#, fuzzy
 msgid ""
 "Variables can be set using the B<-V> common option. They can be also "
 "specified in the file B<debian/substvars> (or whatever other file is "
@@ -1476,11 +1457,11 @@ msgid ""
 "I<name>B<=>I<value>.  Trailing whitespace on each line, blank lines, and "
 "lines starting with a B<#> symbol (comments) are ignored."
 msgstr ""
-"On peut définir les variables en utilisant l'option commune B<-V.> On peut "
+"On peut définir les variables en utilisant l'option commune B<-V>. On peut "
 "aussi se servir du fichier B<debian/substvars> (ou tout autre fichier avec "
-"l'option B<-T).> Ce fichier est composé de lignes de la forme suivante\\ : "
-"I<nom>B<=>I<valeur>.I< Les espaces résiduels sur chaque ligne, les lignes "
-"vides et les lignes qui commencent par un symbole >B<#> sont ignorés."
+"l'option B<-T>). Ce fichier est composé de lignes de la forme suivante\\ : "
+"I<nom>B<=>I<valeur>. Les espaces résiduels sur chaque ligne, les lignes "
+"vides et les lignes qui commencent par un symbole B<#> sont ignorés."
 
 # type: Plain text
 #: dpkg-source.1:709
@@ -1519,7 +1500,6 @@ msgstr "B<Installed-Size>"
 
 # type: Plain text
 #: dpkg-source.1:725
-#, fuzzy
 msgid ""
 "The total size of the package's installed files. This value is copied into "
 "the corresponding control file field; setting it will modify the value of "
@@ -1540,7 +1520,6 @@ msgstr "B<Extra-Size>"
 
 # type: Plain text
 #: dpkg-source.1:734
-#, fuzzy
 msgid ""
 "Additional disk space used when the package is installed. If this variable "
 "is set its value is added to that of the B<Installed-Size> variable (whether "
@@ -1561,7 +1540,6 @@ msgstr "B<F:>I<fieldname>"
 
 # type: Plain text
 #: dpkg-source.1:741
-#, fuzzy
 msgid ""
 "The value of the output field I<fieldname> (which must be given in the "
 "canonical capitalisation). Setting these variables has no effect other than "
@@ -1579,7 +1557,6 @@ msgstr "B<Format>"
 
 # type: Plain text
 #: dpkg-source.1:751
-#, fuzzy
 msgid ""
 "The B<.changes> file format version generated by this version of the source "
 "packaging scripts. If you set this variable the contents of the B<Format> "
@@ -1777,7 +1754,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:815
-#, fuzzy
 msgid ""
 "The binary package entries in the B<debian/files> file will be passed "
 "through variable substitution twice. This should not matter, since B<$>, B<"
@@ -1838,7 +1814,6 @@ msgstr "Copyright (C) 2000 Wichert Akkerman"
 
 # type: Plain text
 #: dpkg-source.1:837
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO WARRANTY. See B</usr/share/doc/dpkg/"
