--- a/man/fr/dpkg-statoverride.8.fr.po
+++ b/man/fr/dpkg-statoverride.8.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-05 10:25+0100\n"
+"PO-Revision-Date: 2006-03-04 10:24+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -15,15 +15,15 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-statoverride"
-msgstr "I</var/lib/dpkg/statoverride>"
+msgstr "dpkg-statoverride"
 
 # type: TH
 #: dpkg-statoverride.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-02-28"
-msgstr "26-01-2006"
+msgstr "28-02-2006"
 
 # type: TH
 #: dpkg-statoverride.8:1
@@ -56,25 +56,22 @@ msgstr "SYNOPSIS"
 
 # type: Plain text
 #: dpkg-statoverride.8:9
-#, fuzzy
 msgid ""
 "B<dpkg-statoverride> [I<options>] B<--add>I< E<lt>userE<gt> E<lt>groupE<gt> "
 "E<lt>modeE<gt> E<lt>fileE<gt>>"
 msgstr ""
-"B<dpkg-statoverride> [options] --add E<lt>utilisateurE<gt> E<lt>groupeE<gt> "
-"E<lt>modeE<gt> I<E<lt>fichierE<gt>>"
+"B<dpkg-statoverride> [I<options>] B<--add>I< E<lt>utilisateurE<gt> "
+"E<lt>groupeE<gt> E<lt>modeE<gt> I<E<lt>fichierE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:13
-#, fuzzy
 msgid "B<dpkg-statoverride> [I<options>] B<--remove>I< E<lt>fileE<gt>>"
-msgstr "B<dpkg-statoverride> [options] --remove I<E<lt>fichierE<gt>>"
+msgstr "B<dpkg-statoverride> [I<options>] B<--remove>I< E<lt>fichierE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:18
-#, fuzzy
 msgid "B<dpkg-statoverride> [I<options>] B<--list> [I<E<lt>glob-patternE<gt>>]"
-msgstr "B<dpkg-statoverride> [options] --list I<[E<lt>exp-regE<gt>]>"
+msgstr "B<dpkg-statoverride> [I<options>] B<--list> [I<E<lt>exp-regE<gt>]>"
 
 # type: SH
 #: dpkg-statoverride.8:19
@@ -84,7 +81,6 @@ msgstr "DESCRIPTION"
 
 # type: Plain text
 #: dpkg-statoverride.8:26
-#, fuzzy
 msgid ""
 "`B<stat overrides>' are a way to tell dpkg to use a different owner or mode "
 "for a file when a package is installed. (note: I use the word `file' here, "
@@ -104,7 +100,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-statoverride.8:30
-#, fuzzy
 msgid ""
 "B<dpkg-statoverride> is a utility to manage the list of stat overrides. It "
 "has three basic functions: adding, removing and listing overrides."
@@ -121,9 +116,9 @@ msgstr "OPTIONS"
 
 # type: TP
 #: dpkg-statoverride.8:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--add>I< E<lt>userE<gt> E<lt>groupE<gt> E<lt>modeE<gt> E<lt>fileE<gt>>"
-msgstr "I<--add E<lt>utilisateurE<gt> E<lt>groupeE<gt> E<lt>modeE<gt> E<lt>fichierE<gt>>"
+msgstr "B<--add>I< E<lt>utilisateurE<gt> E<lt>groupeE<gt> E<lt>modeE<gt> E<lt>fichierE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:39
@@ -152,9 +147,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:42
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--remove>I< E<lt>fileE<gt>>"
-msgstr "I<--remove E<lt>fichierE<gt>>"
+msgstr "B<--remove>I< E<lt>fichierE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:46
@@ -167,9 +162,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:46
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--list> [I<E<lt>glob-patternE<gt>>]"
-msgstr "I<--list [E<lt>exp-regE<gt>]>"
+msgstr "B<--list> [I<E<lt>exp-regE<gt>>]"
 
 # type: Plain text
 #: dpkg-statoverride.8:51
@@ -185,9 +180,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:51
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--force>"
-msgstr "I<--force>"
+msgstr "B<--force>"
 
 # type: Plain text
 #: dpkg-statoverride.8:55
@@ -200,9 +195,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:55
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--update>"
-msgstr "I<--update>"
+msgstr "B<--update>"
 
 # type: Plain text
 #: dpkg-statoverride.8:59
@@ -214,9 +209,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:59
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--quiet>"
-msgstr "I<--quiet>"
+msgstr "B<--quiet>"
 
 # type: Plain text
 #: dpkg-statoverride.8:62
@@ -225,9 +220,9 @@ msgstr "Moins de bavardage sur ce qui est fait."
 
 # type: TP
 #: dpkg-statoverride.8:62
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--help>"
-msgstr "I<--help>"
+msgstr "B<--help>"
 
 # type: Plain text
 #: dpkg-statoverride.8:65
@@ -236,19 +231,18 @@ msgstr "Afficher la version, le copyright et une aide."
 
 # type: TP
 #: dpkg-statoverride.8:65
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--admindir>"
-msgstr "I<--admindir>"
+msgstr "B<--admindir>"
 
 # type: Plain text
 #: dpkg-statoverride.8:69
-#, fuzzy
 msgid ""
 "Change the directory of the dpkg database where the statoverride file is "
 "also stored. Defaults to I</var/lib/dpkg>."
 msgstr ""
 "Change le répertoire de la base de données de dpkg, où se trouve aussi le "
-"fichier statoverride. Par défaut, c'est /var/lib/dpkg."
+"fichier statoverride. Par défaut, c'est I</var/lib/dpkg>."
 
 # type: SH
 #: dpkg-statoverride.8:70
@@ -290,9 +284,8 @@ msgstr "VOIR AUSSI"
 
 # type: Plain text
 #: dpkg-statoverride.8:82
-#, fuzzy
 msgid "B<dpkg>(1)."
-msgstr "B<dpkg>(1)"
+msgstr "B<dpkg>(1)."
 
 # type: SH
 #: dpkg-statoverride.8:83
@@ -318,7 +311,6 @@ msgstr "E<lt>wakkerma@debian.orgE<gt>"
 
 # type: Plain text
 #: dpkg-statoverride.8:90
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
