--- a/man/fr/start-stop-daemon.8.fr.po
+++ b/man/fr/start-stop-daemon.8.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-05 10:34+0100\n"
+"PO-Revision-Date: 2006-03-04 09:52+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -15,15 +15,15 @@ msgstr ""
 
 # type: Plain text
 #: start-stop-daemon.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "start-stop-daemon"
-msgstr "B<start-stop-daemon> B<-H>|B<--help>"
+msgstr "start-stop-daemon"
 
 # type: TH
 #: start-stop-daemon.8:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "28-02-2006"
 
 # type: TH
 #: start-stop-daemon.8:1
@@ -114,7 +114,6 @@ msgstr ""
 
 # type: Plain text
 #: start-stop-daemon.8:68
-#, fuzzy
 msgid ""
 "With B<--stop>, B<start-stop-daemon> also checks for the existence of a "
 "specified process.  If such a process exists, B<start-stop-daemon> sends it "
@@ -123,9 +122,9 @@ msgid ""
 "if B<--oknodo> is specified). If B<--retry> is specified then B<start-stop-"
 "daemon> will check that the process(es) have terminated."
 msgstr ""
-"Avec l'action B<--stop,> B<start-stop-daemon> vérifie aussi l'existence d'un "
+"Avec l'action B<--stop>, B<start-stop-daemon> vérifie aussi l'existence d'un "
 "processus particulier. Quand un tel processus existe B<start-stop-daemon> "
-"lui envoie le signal précisé avec B<--signal,> et se termine avec un code "
+"lui envoie le signal précisé avec B<--signal> et se termine avec un code "
 "d'erreur égal à 0. Quand un tel processus n'existe pas B<start-stop-daemon> "
 "se termine avec un code d'erreur égal à 1 (0 if B<--oknodo> est précisé). Si "
 "B<--retry> est indiquée, B<start-stop-daemon> recherche si le processus "
@@ -133,7 +132,6 @@ msgstr ""
 
 # type: Plain text
 #: start-stop-daemon.8:87
-#, fuzzy
 msgid ""
 "Note that unless B<--pidfile>, is specified, then B<start-stop-daemon> "
 "behaves similarly to B<killall(1).> B<start-stop-daemon> will scan the "
@@ -144,7 +142,7 @@ msgid ""
 "need to live through a B<--stop> you must specify a pidfile."
 msgstr ""
 "Veuillez noter qu'à moins de spécifier B<--pidfile>, le programme B<start-"
-"stop-daemon> se comporte comme B<killall(1).> B<start-stop-daemon> recherche "
+"stop-daemon> se comporte comme B<killall(1)>. B<start-stop-daemon> recherche "
 "dans le tableau des processus tout processus qui correspond au nom, uid ou "
 "gid du processus (si indiqué). Toute correspondance empêchera B<--start> de "
 "démarrer le démon. Tous les processus qui correspondent recevront le signal "
@@ -248,16 +246,15 @@ msgstr "B<-R>|B<--retry> I<durée>|I<action-prévue>"
 
 # type: Plain text
 #: start-stop-daemon.8:129
-#, fuzzy
 msgid ""
 "With B<--stop>, specifies that B<start-stop-daemon> is to check whether the "
 "process(es)  do finish. It will check repeatedly whether any matching "
 "processes are running, until none are. If the processes do not exit it will "
 "then take further action as determined by the schedule."
 msgstr ""
-"Avec l'action B<--stop,> B<start-stop-daemon> doit vérifier que les "
+"Avec l'action B<--stop>, B<start-stop-daemon> doit vérifier que les "
 "processus se sont terminés. Il le fait pour tous les processus "
-"correspondants qui tournent, jusqu'à ce qu'il n'y en ait plus.  Quand le "
+"correspondants qui tournent, jusqu'à ce qu'il n'y en ait plus. Quand le "
 "processus ne se termine pas, il prend d'autres mesures déterminées par "
 "l'action-prévue."
 
@@ -364,7 +361,6 @@ msgstr "B<-c> |B<--chuid> I<utilisateur>|I<uid>"
 
 # type: Plain text
 #: start-stop-daemon.8:201
-#, fuzzy
 msgid ""
 "Change to this username/uid before starting the process. You can also "
 "specify a group by appending a B<:>, then the group or gid in the same way "
@@ -375,14 +371,14 @@ msgid ""
 "process group membership for generic users like B<nobody>)."
 msgstr ""
 "Change l'utilisateur ou l'identifiant avant de lancer le processus. On peut "
-"aussi préciser un groupe an ajoutant un «\\ :\\ », puis le groupe ou un "
-"identifiant de la même façon qu'avec la commande «\\ chown\\ » (utilisateur:"
-"groupe). Quand on utilise cette option, on doit s'apercevoir que les groupes "
-"primaires ainsi que les groupes supplémentaires sont aussi déterminés, même "
-"si l'option «\\ group\\ » n'est pas spécifiée. L'option «\\ group\\ » sert "
-"seulement pour les groupes dont l'utilisateur n'est pas un membre régulier "
-"(c'est comme rendre membres d'un groupe-processus des utilisateurs "
-"génériques comme «\\ nobody\\ »)."
+"aussi préciser un groupe en ajoutant un B<:>, puis le groupe ou un "
+"identifiant de la même façon qu'avec la commande «\\ chown\\ "
+"» (I<utilisateur>B<:>I<groupe>). Quand on utilise cette option, on doit "
+"s'apercevoir que les groupes primaires ainsi que les groupes supplémentaires "
+"sont aussi déterminés, même si l'option B<--group> n'est pas spécifiée. "
+"L'option B<--group>\\ » sert seulement pour les groupes dont l'utilisateur "
+"n'est pas un membre régulier (c'est comme rendre membres d'un groupe-"
+"processus des utilisateurs génériques comme B<nobody>)."
 
 # type: TP
 #: start-stop-daemon.8:201
@@ -408,15 +404,15 @@ msgstr "B<-d>|B<--chdir> I<path>"
 
 # type: Plain text
 #: start-stop-daemon.8:215
-#, fuzzy
 msgid ""
 "Chdir to I<path> before starting the process. This is done after the chroot "
 "if the B<-r>|B<--chroot> option is set. When not specified, start-stop-"
 "daemon will chdir to the root directory before starting the process."
 msgstr ""
 "Change de répertoire pour I<chemin> avant de commencer le processus. Cela "
-"est fait avant le changement de répertoire racine si l'option B<-r>|B<--"
-"chroot> est demandée."
+"est fait après le changement de répertoire racine si l'option B<-r>|B<--"
+"chroot> est demandée. Si rien n'est demandé, start-stop-daemon changera de "
+"répertoire racine avant de commencer le processus."
 
 # type: TP
 #: start-stop-daemon.8:215
@@ -446,7 +442,7 @@ msgstr ""
 
 # type: TP
 #: start-stop-daemon.8:227
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-N>|B<--nicelevel> I<int>"
 msgstr "B<-N>|B<--nicelevel> I<int>"
 
