--- a/man/fr/update-alternatives.8.fr.po
+++ b/man/fr/update-alternatives.8.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-05 10:40+0100\n"
+"PO-Revision-Date: 2006-03-04 09:31+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -22,9 +22,9 @@ msgstr ""
 #.  (at your option) any later version.  There is NO WARRANTY.  You can
 #.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
 #: update-alternatives.8:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "update-alternatives"
-msgstr "update-alternatives --auto vi"
+msgstr "update-alternatives"
 
 # type: TH
 #.  update\-alternatives.8
@@ -37,7 +37,7 @@ msgstr "update-alternatives --auto vi"
 #: update-alternatives.8:8
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "28-02-2006"
 
 # type: TH
 #.  update\-alternatives.8
@@ -170,7 +170,6 @@ msgstr ""
 
 # type: Plain text
 #: update-alternatives.8:94
-#, fuzzy
 msgid ""
 "Debian's alternatives system aims to solve this problem.  A generic name in "
 "the filesystem is shared by all files providing interchangeable "
@@ -293,7 +292,6 @@ msgstr ""
 
 # type: Plain text
 #: update-alternatives.8:176
-#, fuzzy
 msgid ""
 "When using the I<--config> option, B<update-alternatives> will list all of "
 "the choices for the link group of which given I<name> is the master link. "
@@ -303,12 +301,12 @@ msgid ""
 "longer be in I<auto> mode. You will need to use the I<--auto> option in "
 "order to return to the automatic state."
 msgstr ""
-"Quand on utilise l'option I<--config,> B<update-alternatives> affiche toutes "
-"les possibilités du groupe pour lequel I<nom> est le lien principal.  Le "
+"Quand on utilise l'option I<--config>, B<update-alternatives> affiche toutes "
+"les possibilités du groupe pour lequel I<nom> est le lien principal. Le "
 "choix actuel est noté par un «\\ *\\ » et le choix avec la plus haute "
-"priorité, par un «\\ +\\ » On vous demandera alors quelle possibilité vous "
-"choisissez pour ce groupe.  Dès qu'une modification est faite, le groupe de "
-"liens n'est plus en mode I<auto.> Il vous faudra utiliser l'option I<--auto> "
+"priorité, par un «\\ +\\ ». On vous demandera alors quelle possibilité vous "
+"choisissez pour ce groupe. Dès qu'une modification est faite, le groupe de "
+"liens n'est plus en mode I<auto>. Il vous faudra utiliser l'option I<--auto> "
 "pour revenir au mode automatique."
 
 # type: Plain text
@@ -745,7 +743,6 @@ msgstr "B<--remove> I<nom chemin>"
 
 # type: Plain text
 #: update-alternatives.8:370
-#, fuzzy
 msgid ""
 "Remove an alternative and all of its associated slave links.  I<name> is a "
 "name in the alternatives directory, and I<path> is an absolute filename to "
@@ -759,10 +756,10 @@ msgstr ""
 "Enlève une alternative et tous ses liens secondaires associés. I<nom> est un "
 "nom dans le répertoire des «\\ alternatives\\ », et I<chemin> est un nom de "
 "fichier auquel I<nom> peut être lié. Quand I<nom> est en effet lié à "
-"I<chemin,> I<nom> est mis à jour et pointe vers une autre alternative "
+"I<chemin>, I<nom> est mis à jour et pointe vers une autre alternative "
 "adéquate, ou bien est enlevé s'il n'y en a pas d'autre. De même, les liens "
 "secondaires associés sont mis à jour ou enlevés. Quand le lien ne pointe pas "
-"déjà sur I<chemin,> aucun lien n'est modifié\\ ; seules les informations sur "
+"déjà sur I<chemin>, aucun lien n'est modifié\\ ; seules les informations sur "
 "l'alternative sont supprimées."
 
 # type: TP
@@ -849,7 +846,6 @@ msgstr "B<--config> I<lien>"
 
 # type: Plain text
 #: update-alternatives.8:406
-#, fuzzy
 msgid ""
 "Show available alternatives for a link group and allow the user to "
 "interactively select which one to use. The link group is updated and taken "
@@ -857,7 +853,7 @@ msgid ""
 msgstr ""
 "Affiche les alternatives disponibles pour un groupe de liens et autorise "
 "l'utilisateur à faire un choix de manière interactive. Le groupe de liens "
-"est mise à jour et le mode automatique I<auto> est désactivé."
+"est mis à jour et le mode automatique I<auto> est désactivé."
 
 # type: SH
 #: update-alternatives.8:407
@@ -983,7 +979,6 @@ msgstr "AUTEUR"
 
 # type: Plain text
 #: update-alternatives.8:451
-#, fuzzy
 msgid ""
 "Debian update-alternatives is copyright 1995 Ian Jackson. It is free "
 "software; see the GNU General Public Licence version 2 or later for copying "
@@ -996,7 +991,6 @@ msgstr ""
 
 # type: Plain text
 #: update-alternatives.8:455
-#, fuzzy
 msgid ""
 "This manual page is copyright 1997/98 Charles Briscoe-Smith.  This is free "
 "documentation; see the GNU General Public Licence version 2 or later for "
