--- a/man/fr/dpkg-scanpackages.1.fr.po
+++ b/man/fr/dpkg-scanpackages.1.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-05 09:27+0100\n"
+"PO-Revision-Date: 2006-03-04 10:38+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr ""
 #: dpkg-scanpackages.1:16
 #, no-wrap
 msgid "dpkg-scanpackages"
-msgstr ""
+msgstr "dpkg-scanpackages"
 
 # type: TH
 #.  This manpage is copyright (C) 1996 Michael Shields <shields@crosslink.net>.
@@ -47,7 +47,7 @@ msgstr ""
 #: dpkg-scanpackages.1:16
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "28-02-2006"
 
 # type: TH
 #.  This manpage is copyright (C) 1996 Michael Shields <shields@crosslink.net>.
@@ -63,7 +63,7 @@ msgstr ""
 #.  License along with dpkg; if not, write to the Free Software
 #.  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #: dpkg-scanpackages.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
 msgstr "Projet Debian"
 
@@ -104,12 +104,11 @@ msgstr "SYNOPSIS"
 
 # type: Plain text
 #: dpkg-scanpackages.1:30
-#, fuzzy
 msgid ""
 "B<dpkg-scanpackages> [B<-u>] [B<-a> I<E<lt>archE<gt>> ] [B<-m>] I<binarydir> "
 "I<overridefile> [I<pathprefix>] B<E<gt>> I<Packages>"
 msgstr ""
-"B<dpkg-scanpackages> [I<-u>] [I<-aE<lt>archE<gt>>] [I<-m>] I<rep-de-"
+"B<dpkg-scanpackages> [B<-u>] [B<-a> I<E<lt>archE<gt>>] [B<-m>] I<rep-de-"
 "binaires> I<fichier-d'-override> [I<chemin-à-préfixer>] B<E<gt>> I<Packages>"
 
 # type: SH
@@ -120,7 +119,6 @@ msgstr "DESCRIPTION"
 
 # type: Plain text
 #: dpkg-scanpackages.1:42
-#, fuzzy
 msgid ""
 "B<dpkg-scanpackages> sorts through a tree of Debian binary packages and "
 "creates a Packages file, used by B<dselect>(1), etc, to tell the user what "
@@ -170,26 +168,23 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-scanpackages.1:60
-#, fuzzy
 msgid "If B<-u> is specified, then scan for *.udeb, instead of *.deb."
 msgstr ""
-"Si l'option I<-u> est spécifiée, la commande recherche des *.udeb au lieu de "
+"Si l'option B<-u> est spécifiée, la commande recherche des *.udeb au lieu de "
 "*.deb."
 
 # type: Plain text
 #: dpkg-scanpackages.1:63
-#, fuzzy
 msgid ""
 "When B<-a>I<E<lt>archE<gt>> is specified, then instead of scanning for all "
 "debs, a pattern consisting of *_all.deb and *_arch.deb is used."
 msgstr ""
-"Quand -aI<E<lt>archE<gt>> est spécifiée, la commande ne recherche pas tous "
-"les fichiers debs\\ ; elle utilise un motif équivalent à *_all.deb et à "
+"Quand B<-a>I<E<lt>archE<gt>> est spécifiée, la commande ne recherche pas "
+"tous les fichiers debs\\ ; elle utilise un motif équivalent à *_all.deb et à "
 "*_arch.deb."
 
 # type: Plain text
 #: dpkg-scanpackages.1:69
-#, fuzzy
 msgid ""
 "If more than one version of a package is found only the newest one is "
 "included in the output. If they have the same version and only differ in "
@@ -200,7 +195,7 @@ msgstr ""
 "S'il existe plusieurs versions d'un paquet, seule la plus récente est "
 "affichée en sortie. Si les paquets ont la même version mais diffèrent par "
 "l'architecture, seul le premier trouvé est utilisé. Il est possible de "
-"modifier ce comportement avec l'option I<-m>\\ : tous les paquets trouvés "
+"modifier ce comportement avec l'option B<-m>\\ : tous les paquets trouvés "
 "seront affichés en sortie."
 
 # type: SH
@@ -227,7 +222,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-scanpackages.1:80
-#, fuzzy
 msgid ""
 "The override file has a simple whitespace-delimited format. Comments are "
 "allowed (denoted with a B<#>)."
@@ -242,7 +236,6 @@ msgstr "I<paquet> I<priorité> I<section> [I<responsable>]"
 
 # type: Plain text
 #: dpkg-scanpackages.1:91
-#, fuzzy
 msgid ""
 "I<package> is the name of the package. Entries in the override file for "
 "packages not found in the binary tree are ignored."
@@ -252,7 +245,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-scanpackages.1:100
-#, fuzzy
 msgid ""
 "I<priority> and I<section> place the package within the release tree; these "
 "ought not to be found in the control file. If the package is found in a "
@@ -293,7 +285,6 @@ msgstr "DIAGNOSTICS"
 
 # type: Plain text
 #: dpkg-scanpackages.1:120
-#, fuzzy
 msgid ""
 "B<dpkg-scanpackages> outputs the usual self-explanatory errors. It also "
 "warns about packages that are in the wrong subdirectory, are duplicated, "
